--- a/style.css
+++ b/style.css
@@ -11,3 +11,23 @@ img {
     width: 150px;
     height: 100px;
 }
+
+#card-1 {
+    border: 2px solid black;
+    border-radius: 30px;
+    margin-right: 10px;
+}
+
+#image-1 {
+    float: left;
+}
+
+#card-2 {
+    border: 2px solid black;
+    border-radius: 30px;
+    padding: 20px;
+}
+
+#image-2 {
+    float: left;
+}
