--- a/style.css
+++ b/style.css
@@ -7,27 +7,56 @@ body {
     display: flex;
 }
 
-img {
-    width: 150px;
-    height: 100px;
-}
-
 #card-1 {
     border: 2px solid black;
     border-radius: 30px;
+    padding: 20px;
+    width: 49%;
     margin-right: 10px;
 }
 
-#image-1 {
+#image-1, #image-2 {
     float: left;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
 
 #card-2 {
     border: 2px solid black;
     border-radius: 30px;
     padding: 20px;
+    width: 49%;
 }
 
-#image-2 {
+#card-3 {
+    border: 2px solid black;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 20px;
+}
+
+#image-3 {
     float: left;
+    border-radius: 30px;
+    width: 300px;
+    height: 200px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+#card-4 {
+    border: 2px solid black;
+    border-radius: 30px;
+    margin-top: 10px;
+    padding: 20px;
+}
+
+#image-4 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
 }
