--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #card-1 {
-    padding: 20px;
+    padding: 0px 20px 20px;
     width: 49%;
     margin-right: 10px;
 }
@@ -18,6 +18,18 @@ body {
     padding: 15px;
     color: white;
     background-color: black;
+    font-size: 18px;
+    line-height: 1.4;
+}
+
+#author-1 {
+    margin-bottom: -10px;
+}
+
+#author-1, #occupation-1 {
+    position: relative;
+    top: 10px;
+    left: 15px;
 }
 
 #occupation-1, #occupation-2 {
@@ -42,6 +54,16 @@ body {
     width: 49%;
 }
 
+#card-2-author {
+    position: relative;
+    top: 20px;
+}
+
+#testimonial-2 {
+    font-size: 18px;
+    line-height: 1.4;
+}
+
 #author-2, #occupation-2 {
     position: relative;
     left: 10px;
@@ -58,6 +80,16 @@ body {
     margin-top: 30px;
     padding: 20px;
     background-color: black;
+}
+
+#occupation-3 {
+    position: relative;
+    top: -10px;
+}
+
+#testimonial-3 {
+    font-size: 18px;
+    line-height: 1.4;
 }
 
 #image-3 {
@@ -98,6 +130,7 @@ body {
 }
 
 #testimonial-4 {
+    font-size: 18px;
     margin-left: 50px;
     margin-right: 50px;
     text-align: center;
@@ -105,4 +138,5 @@ body {
 
 #author-4 {
     text-align: center;
+    font-size: 18px;
 }   
